# rtl-sdr-lte-scanner-python

./: .gitignore  AGENT.md  PROJECT_HANDOVER.md  README.md  pyproject.toml
configs/: config.toml
data/: frequency_band_map.json  operators.json
src/application/: scanner.py
src/cli/: main.py
src/domain/: enums.py  exceptions.py  models.py
src/infrastructure/: config.py  filesystem.py  logger.py
src/repository/: frequency_band_db.py  operator_db.py
src/services/: cell_parser.py  exporter.py  formatter.py  operator_resolver.py  srsran_runner.py
src/utils/: frequency.py  paths.py  validation.py
tests/: test_cell_parser.py  test_cli.py  test_config.py  test_exporter.py  test_filesystem.py  test_formatter.py  test_frequency.py  test_logger.py  test_models.py  test_operator_db.py  test_operator_resolver.py  test_scanner.py  test_srsran_runner.py  test_validation.py
tests/fixtures/: config.toml  operators.json
